# ComfyUI-LongCat-AudioDIT-TTS

./: .gitignore  README.md  README_zh.md  __init__.py  pyproject.toml  requirements.txt
audiodit/: modeling_audiodit.py
example_workflows/: LongCat-AudioDIT-TTS_example_workflow.json
nodes/: loader.py  minimax_tts_node.py  model_cache.py  multi_speaker_node.py  tts_node.py  voice_clone_node.py
tests/: conftest.py  test_minimax_tts.py
